# phoronix-reader

./: Cargo.toml  README.md
src/: article.rs  homepage.rs  linesplit.rs  main.rs  phoronix.html  phoronix.rs  phoronix_cli.rs  phoronix_gui.rs
src/phoronix/: article.rs  cli.rs  gtk.rs  gui.rs  homepage.rs
